test/corpus/indents.txt
=============================================
single transaction with some indent (spaces)
=============================================

2024-4-2
  wrk            ....

---------------------------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account)
      (amount))))

===========================================
single transaction with some indent (tabs)
===========================================

2024-4-2
	wrk            ....

-------------------------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account)
      (amount))))
