test/corpus/org.txt
==========================
org headings simple entry
==========================

* 2024-4-2
** wrk:proj:treesitter    .... ....

--------------------------

(source_file
  (day_entry
    (org_heading)
    (date)
    (transaction
      (org_heading)
      (account)
      (quantity))))
